[gd_scene load_steps=3 format=3 uid="uid://cokk8aavxxh51"]

[ext_resource type="Script" path="res://popupMulti.gd" id="1_hhuho"]
[ext_resource type="Theme" uid="uid://bfh8a6pg8as8h" path="res://PIXELFONTTHEME.tres" id="1_wveho"]

[node name="Popup" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 367.0
offset_bottom = 239.0
theme = ExtResource("1_wveho")
script = ExtResource("1_hhuho")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.286275, 0.364706, 0.305882, 1)

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 129.0
offset_top = 156.0
offset_right = 206.0
offset_bottom = 187.0
scale = Vector2(1.16817, 1.08918)
text = "CLICK"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 68.0
offset_right = 322.0
offset_bottom = 91.0
text = "Click this Quickly"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.793
anchor_top = -2.948
anchor_right = -0.793
anchor_bottom = -2.948
offset_left = 395.824
offset_top = 819.52
offset_right = 475.824
offset_bottom = 840.52
scale = Vector2(1.9568, 1)

[node name="Miliseconds" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 3.0
offset_right = 35.0
offset_bottom = 20.0
scale = Vector2(0.629118, 1.03734)
text = "00"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button" to="Panel" method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="Panel" method="_on_timer_timeout"]
