[gd_scene load_steps=3 format=3 uid="uid://dq1j4kyhforbr"]

[ext_resource type="Theme" uid="uid://bfh8a6pg8as8h" path="res://PIXELFONTTHEME.tres" id="1_121rm"]
[ext_resource type="Script" path="res://popupMulti.gd" id="1_sd7oj"]

[node name="PopupMultiClick" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 330.0
offset_bottom = 151.0
theme = ExtResource("1_121rm")
script = ExtResource("1_sd7oj")
metadata/_edit_horizontal_guides_ = []
metadata/_edit_vertical_guides_ = []

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.286275, 0.364706, 0.305882, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_right = 332.0
offset_bottom = 151.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Doante $400,000"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="yes" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Yes"

[node name="no" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_121rm")
text = "No"

[node name="yesafterno" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "yes
"

[node name="noafteryes" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "No
"

[node name="reallyYes" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "yes"

[node name="reallyNo" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "no"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/no" to="." method="_on_no_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/yesafterno" to="." method="_on_yesafterno_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/noafteryes" to="." method="_on_noafteryes_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/reallyYes" to="." method="_on_really_yes_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/reallyNo" to="." method="_on_really_no_pressed"]
